<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Factúralo</string>
    <string name="login_usr">RFC:</string>
    <string name="login_pass">Contraseña:</string>
    <string name="repetir_pass">Repetir Contraseña:</string>
    <string name="fecha_factura">Fecha:</string>
    <string name="hacer_factura">Datos de factura</string>
    <string name="no_factura">No. Factura:</string>
    <string name="nombre_cliente">Nombre cliente:</string>
    <string name="direccion_cliente">Direccion cliente:</string>
    <string name="telefono_cliente">Telefono cliente:</string>
    <string name="numero_folio">Folio:</string>
    <color name="red">#ffff0b24</color>
    <color name="gray">#cccccc</color>
    <color name="white">#ffffff</color>
    <string name="registro_usuarios">Registro Usuario</string>
    <string name="vista_factura">Vista Factura</string>
    <string name="escanee_codigo_manualmente">Escanee la factura o introdusca el folio manualmente.</string>
    <string name="iniciar_sesion">Iniciar Sesion</string>
    <string name="registrarse">Registrarse</string>
    <string name="Escanear_codigo">Escanear Codigo</string>
    <string name="Canselar">Cancelar</string>
    <string name="Aceptar">Aceptar</string>
    <string name="codigo_postal">Codigo postal:</string>
    <string name="correo_electronico">Correo electronico:</string>
    <string name="apellido_cliente">Apellido Cliente:</string>
    <string name="rfc">RFC:</string>
    <string name="continuar">Continuar</string>

    <!-- Titles -->
    <string name="scan">Scan</string>
    <string name="encode">Generate</string>
    <string name="decode">Decode</string>

    <!-- Errors and messages -->
    <string name="qrdroid_missing">QR Droid version 3.5 or later is required. Do you want to download or update it for free?</string>
    <string name="from_market">From the Market</string>
    <string name="direct">Direct download</string>
    <string name="cancel">Cancel</string>
    <string name="enter_code">Enter some text to encode</string>
    <string name="not_saved">QR code image could not be saved. Check your SD card is available</string>
    <string name="saved">QR code image was saved as</string>
    <string name="enter_url">Enter local path (starting with /) or remote URL (starting with http://) of QR code image</string>
    <string name="not_decoded">QR code image could not been loaded or decoded</string>
    <string name="procesing">Processing...</string>

    <!-- URLs -->
    <string name="url_market">http://market.android.com/details?id=la.droid.qr</string>
    <string name="url_direct">http://droid.la/apk/qr/</string>
    <string name="url_source">http://qrdroid.com/services</string>

    <!-- Demo -->
    <string name="demo">"This is a demo for Android developers who want to use \"QR Droid\" services in their own apps, for free.\n\nThis won't be useful to final users. Instead, please install \"QR Droid\".\n\nIf you are a developer, get demo documentation and source code here:\nhttp://qrdroid.com/services"</string>
    <string name="qrDroid">Get QR Droid</string>
    <string name="source">Get demo docs</string>
    <string name="close">Close</string>

</resources>
